--- a/pytorch_trader_example.ipynb
+++ b/pytorch_trader_example.ipynb
@@ -25,14 +25,13 @@
     "\n",
     "---\n",
     "\n",
-    "The model trained here is super basic (and the code has a nasty buy somewhere causing it to only HOLD when evaluated...). Attend Josiah's RL course to learn more. You can also start playing with the network's architecture and the training hyperparameters. Maybe adjust the reward function in the DeepStockTraderEnv. Are there ways to include context/memory? So much to explore!\n",
-    "\n",
+       "\n",
     "***PLEASE SEE THE END OF THIS NOTEBOOK WHICH OUTLINES HOW TO SUBMIT TO OUR WEBSITE!!***\n",
     "\n",
     "---\n",
     "\n",
     "Good luck, <br>\n",
-    "Seth Hamilton | TAMU Datathon R&D"
+    "Seth Hamilton | "
    ],
    "cell_type": "markdown",
    "metadata": {}
